// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function digraph callback style 1`] = `
digraph "G" {
  "aa";
  "bb";
  "cc";
  subgraph "A" {
    "Aaa" [
      color = "pink",
    ];
    "Abb" [
      color = "violet",
    ];
    "Acc";
    "Aaa":"a" -> "Abb" -> "Acc" -> "E" [
      color = "red",
    ];
  }
  "aa" -> "bb" -> "cc" [
    color = "red",
  ];
}
`;

exports[`function digraph comment 1`] = `
// This is directed graph.
digraph "G" {
  // This is node a.
  "aa";
  // This is node b.
  "bb";
  // This is node c.
  "cc";
  // It is subgraph A.
  // It is not cluster
  subgraph "A" {
    // This is node Aaa in subgraph A.
    "Aaa" [
      // It will be filled by pink.
      color = "pink",
    ];
  }
  // This is edge.
  // It connects a, b and c.
  "aa" -> "bb" -> "cc" [
    // Edge line will draw with red.
    color = "red",
  ];
}
`;

exports[`function graph callback style 1`] = `
graph "G" {
  "aa";
  "bb";
  "cc";
  subgraph "A" {
    "Aaa" [
      color = "pink",
    ];
    "Abb" [
      color = "violet",
    ];
    "Acc";
    "hoge";
    "Aaa" -- "Abb" -- "Acc" -- "hoge":"fuga" [
      color = "red",
    ];
    "Aaa":"a":"w" -- "Abb":"w" -- "Aaa":"e" -- "Acc":"r":"e" [
      color = "red",
    ];
  }
  "aa" -- "bb" -- "cc" [
    color = "red",
  ];
}
`;

exports[`function graph escape characters 1`] = `
graph "G\\n\\"" {
  "a\\na" [
    label = "1\\n2\\n\\"\\n3",
  ];
  "b\\"b";
  "c\\nc\\"";
  subgraph "graph.name" {
    "node.name" [
      label = "node",
    ];
    "another.name" [
      label = "words with space and \\"quote\\"",
    ];
    "node.name" -- "another.name";
  }
  "a\\na" -- "b\\"b" -- "c\\nc\\"" [
    color = "red",
  ];
}
`;
